--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,9 @@ h4 {
   .title-h3 {
     font-size: 25px;
   }
+  h4 {
+    font-size: 22px;
+  }
 }
 /*Обнуление*/
 *,
@@ -1596,6 +1599,9 @@ body::before {
 .check-list__title p {
   padding-left: 237px;
 }
+.check-list__title p br {
+  display: none;
+}
 .check-list__title p:nth-child(2) {
   margin-bottom: 38.75px;
 }
@@ -1683,10 +1689,14 @@ body::before {
 
 .check-list__checkbox {
   margin-right: 7px;
+  cursor: pointer;
 }
 
 .checkbox {
   opacity: 0.6;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .check-list__btn {
@@ -2417,6 +2427,12 @@ select.form__input {
   .schedule__list::after {
     display: none;
   }
+  .pay__row {
+    margin-left: 300px;
+  }
+  .pay__img-2 {
+    left: -50px;
+  }
 }
 @media (max-width: 1220px) {
   .secrets__text {
@@ -2459,6 +2475,37 @@ select.form__input {
   }
   .help__title-in-pickture {
     left: -411px;
+  }
+  .pay__row {
+    margin-left: 250px;
+    margin-right: 25px;
+  }
+  .pay__column {
+    min-width: 380px;
+  }
+  .pay__column::before {
+    left: 5px;
+  }
+  .pay__column {
+    padding: 0 5px 0 47px;
+  }
+  .pay__column-title {
+    white-space: nowrap;
+  }
+  .pay__img-1 {
+    display: none;
+  }
+  .check-list__second-img {
+    display: none;
+  }
+  .check-list__title {
+    padding-left: 90px;
+  }
+  .check-list__title p {
+    padding-left: 137px;
+  }
+  .check-list__form {
+    margin-left: 227px;
   }
 }
 @media (max-width: 1000px) {
@@ -2563,6 +2610,9 @@ select.form__input {
   .help .schedule__container {
     padding-top: 145px;
   }
+  .check-list__first-img {
+    display: none;
+  }
 }
 @media (max-width: 920px) {
   .come__title-top {
@@ -2573,6 +2623,40 @@ select.form__input {
   }
   .shedule__link-more-info {
     font-size: 0;
+  }
+  .pay__title {
+    padding-left: 34px;
+  }
+  .pay__title p {
+    padding-left: 140px;
+  }
+  .pay__img-2 {
+    display: none;
+  }
+  .pay__row {
+    margin-left: 50px;
+    margin-right: 50px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .check-list__title {
+    padding: 0 28px;
+  }
+  .check-list__title p br {
+    display: block;
+  }
+  .check-list__form {
+    margin-left: 165px;
+  }
+  .check-list__title p:nth-child(2) {
+    margin-bottom: 29px;
+  }
+  .check-list__title p:nth-child(3) {
+    margin-bottom: 29px;
   }
 }
 @media (max-width: 800px) {
@@ -2614,6 +2698,9 @@ select.form__input {
     bottom: 0;
     left: 0;
     right: auto;
+  }
+  .check-list__container {
+    margin-right: 27px;
   }
 }
 @media (max-width: 710px) {
@@ -2859,6 +2946,52 @@ select.form__input {
   .schedule__wrapper {
     padding: 0 15px;
   }
+  .pay__title {
+    padding-top: 0;
+  }
+  .pay__title p {
+    padding-left: 43px;
+  }
+  .pay__row {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .pay {
+    margin-bottom: 125px;
+  }
+  .check-list__title {
+    padding: 0 43px;
+  }
+  .check-list__title p {
+    padding-left: 43px;
+  }
+  .check-list__title p img {
+    width: 52px;
+  }
+  .check-list__title p:nth-child(2) {
+    margin-bottom: 11px;
+  }
+  .check-list__title p:nth-child(3) {
+    margin-bottom: 15px;
+  }
+  .check-list__form {
+    margin-left: 86px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .check-list__container {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    margin-bottom: 33px;
+    max-width: 234px;
+  }
+  .check-list__input {
+    width: 234px;
+  }
+  .check-list__btn img {
+    width: 133px;
+  }
 }
 @media (max-width: 450px) {
   .come__wrapper {
@@ -2901,5 +3034,26 @@ select.form__input {
   .shedule__link-more-info {
     font-size: 15px;
     color: #fff;
+  }
+  .pay__column {
+    padding: 50px 5px 0 0px;
+    margin-left: 10px;
+    min-width: 0px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+  }
+  .pay__column::before {
+    top: 0;
+    left: 0;
+  }
+  .check-list__title {
+    padding: 0 9px;
+  }
+  .check-list__title p {
+    padding: 0 34px;
+  }
+  .check-list__form {
+    margin-left: 45px;
   }
 }
