--- a/css/style.css
+++ b/css/style.css
@@ -1770,6 +1770,9 @@ body::before {
   padding-top: 220px;
   text-align: center;
 }
+.reviews__title br {
+  display: none;
+}
 .reviews__title p {
   padding-left: 234px;
 }
@@ -1792,10 +1795,12 @@ body::before {
   font-weight: 600;
   font-size: 20px;
   line-height: 150.19%;
+  padding-left: 10px;
 }
 
 .review__author-instagram {
   margin-bottom: 172px;
+  padding-left: 10px;
 }
 
 .review__author-instagram-link {
@@ -1902,7 +1907,7 @@ body::before {
   content: "";
   position: absolute;
   top: 0;
-  right: 30px;
+  right: 0px;
   width: 20px;
   height: 20px;
   background-image: url("../img/sensei/0.svg");
@@ -2181,6 +2186,7 @@ select.form__input {
 }
 .footer__column:last-child a {
   margin-right: 21px;
+  text-decoration: none;
 }
 
 .footer__column-title {
@@ -2323,6 +2329,44 @@ select.form__input {
   }
   .help__img-1 {
     left: 38px;
+  }
+  .reviews__title {
+    text-align: left;
+    padding-left: 35px;
+  }
+  .reviews__title p {
+    padding-left: 137px;
+    padding-top: 12px;
+  }
+  .reviews__img1::after, .reviews__img2::before, .reviews__img4::before {
+    display: none;
+  }
+  .reviews__images img {
+    width: 100%;
+  }
+  .reviews__img1 {
+    right: 29px;
+    left: auto;
+    top: 37px;
+    width: 100px;
+  }
+  .reviews__img2 {
+    top: 109px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+  .reviews__img3 {
+    left: 0;
+    right: auto;
+    top: 165px;
+  }
+  .sensei__wrapper {
+    padding: 0 35px;
+  }
+  .sensei__wrapper .slide__img img {
+    width: 100%;
   }
 }
 @media (max-width: 1315px) {
@@ -2507,6 +2551,9 @@ select.form__input {
   .check-list__form {
     margin-left: 227px;
   }
+  .reviews__title {
+    white-space: nowrap;
+  }
 }
 @media (max-width: 1000px) {
   .come__wrapper {
@@ -2613,6 +2660,26 @@ select.form__input {
   .check-list__first-img {
     display: none;
   }
+  .reviews__img1 {
+    width: 68.02px;
+    height: 78.35px;
+    right: 29px;
+    left: auto;
+    top: 37px;
+  }
+  .reviews__img3 {
+    width: 97.08px;
+    height: 83.63px;
+    left: 0;
+    right: auto;
+    top: 165px;
+  }
+  .reviews__img4 {
+    right: 7px;
+  }
+  .reviews__title {
+    margin-right: 10px;
+  }
 }
 @media (max-width: 920px) {
   .come__title-top {
@@ -2657,6 +2724,22 @@ select.form__input {
   }
   .check-list__title p:nth-child(3) {
     margin-bottom: 29px;
+  }
+  .reviews .swiper {
+    margin: 0 25px;
+  }
+  .reviews .slide__img {
+    padding-left: 10px;
+  }
+  .sensei__title p {
+    margin-right: -267px;
+  }
+  .sensei__title span {
+    display: none;
+  }
+  .sensei__top-text {
+    margin-bottom: auto;
+    margin-left: 70px;
   }
 }
 @media (max-width: 800px) {
@@ -2959,6 +3042,9 @@ select.form__input {
   .pay {
     margin-bottom: 125px;
   }
+  .check-list {
+    padding-bottom: 70px;
+  }
   .check-list__title {
     padding: 0 43px;
   }
@@ -2991,6 +3077,79 @@ select.form__input {
   }
   .check-list__btn img {
     width: 133px;
+  }
+  .reviews__title {
+    padding-top: 78px;
+  }
+  .reviews__images {
+    display: none;
+  }
+  .reviews__wrapper {
+    padding-bottom: 89px;
+  }
+  .reviews .swiper {
+    margin: 0 10px;
+  }
+  .reviews .swiper-slide {
+    position: relative;
+    margin-top: 60px;
+  }
+  .reviews .slide__img {
+    position: absolute;
+    top: 60px;
+    left: 50%;
+    margin: 0;
+    width: 226px;
+    padding: 0;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+  .reviews .slide__img img {
+    width: 100%;
+  }
+  .reviews .slide__text {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+    font-size: 15px;
+    line-height: 20px;
+  }
+  .review__author {
+    padding-top: 305px;
+  }
+  .reviews .swiper-scrollbar.swiper-scrollbar-horizontal {
+    top: 343px;
+  }
+  .reviews .swiper-controllers__container {
+    top: 319px;
+  }
+  .review__author-instagram {
+    margin-bottom: 23px;
+  }
+  .sensei__top {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-bottom: 37px;
+  }
+  .sensei__title p {
+    margin: 0;
+    padding-left: 40px;
+  }
+  .sensei__top-text {
+    margin-top: 47px;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+    margin-left: 0;
   }
 }
 @media (max-width: 450px) {
@@ -3055,5 +3214,15 @@ select.form__input {
   }
   .check-list__form {
     margin-left: 45px;
+  }
+  .reviews__title {
+    padding-left: 9px;
+  }
+  .reviews__title P {
+    padding-top: 0;
+    padding-left: 36px;
+  }
+  .sensei__wrapper {
+    padding: 0 9px;
   }
 }
