--- a/css/style.css
+++ b/css/style.css
@@ -2253,14 +2253,13 @@ select.form__input {
 
 .footer__logo {
   margin-top: 8px;
-}
-.footer__logo a {
   font-family: "New-YorkerC";
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 151.19%;
   /* or 30px */
+  display: inline-block;
   text-transform: uppercase;
   color: #FFFFFF;
   text-decoration: none;
@@ -2477,6 +2476,19 @@ select.form__input {
   .pay__img-2 {
     left: -50px;
   }
+  .image3 {
+    right: 10px;
+  }
+  .image3::after {
+    display: none;
+  }
+  .footer__row {
+    margin: 0 300px;
+    max-width: 100%;
+  }
+  .footer-bottom {
+    margin: 0 35px;
+  }
 }
 @media (max-width: 1220px) {
   .secrets__text {
@@ -2553,6 +2565,35 @@ select.form__input {
   }
   .reviews__title {
     white-space: nowrap;
+  }
+  .form__form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .form__btn {
+    width: 150px;
+    height: 150px;
+    margin-top: 41px;
+  }
+  .form__title {
+    padding-left: 60px;
+  }
+  .footer__title {
+    padding: 142px 0 0 64px;
+  }
+  .footer__row {
+    margin-right: 100px;
+  }
+  .span.star-in {
+    position: static;
+  }
+  span.star-in::before {
+    display: none;
+  }
+  .footer__img-3 {
+    right: -33px;
   }
 }
 @media (max-width: 1000px) {
@@ -2680,6 +2721,89 @@ select.form__input {
   .reviews__title {
     margin-right: 10px;
   }
+  .image1 {
+    display: none;
+  }
+  .image2 {
+    display: none;
+  }
+  .image3 {
+    right: 73px;
+  }
+  .form__form {
+    padding-left: 171px;
+  }
+  .form__title {
+    padding-left: 31px;
+    position: relative;
+    padding-bottom: 78px;
+  }
+  .form__title span {
+    display: block;
+    padding-left: 140px;
+  }
+  .form__title span.in-black-stared {
+    display: inline;
+    padding-left: 0;
+  }
+  .form__title p.vector {
+    margin-left: 0px;
+    padding: 0;
+    position: absolute;
+    bottom: 180px;
+    left: 88px;
+    width: 48px;
+    height: 48px;
+  }
+  .form__title p.vector img {
+    width: 100%;
+  }
+  .form__title p {
+    padding-left: 140px;
+  }
+  .form__wrapper {
+    padding-bottom: 110px;
+  }
+  .footer__img-3 {
+    display: none;
+  }
+  .footer-top__wrapper {
+    padding-bottom: 470px;
+  }
+  .footer__img-2 {
+    top: auto;
+    bottom: 144px;
+    right: -28px;
+    left: auto;
+    width: 481px;
+    height: 240px;
+  }
+  .footer__img-2 img {
+    width: 100%;
+    height: 100%;
+  }
+  .footer__img-1 {
+    top: auto;
+    bottom: 185px;
+    left: 34px;
+    width: 205px;
+    height: 266px;
+  }
+  .footer__img-1 img {
+    width: 100%;
+  }
+  .footer__row {
+    margin-left: 174px;
+  }
+  .footer__title p {
+    padding-left: 90px;
+  }
+  .footer__logo {
+    margin-bottom: 45px;
+  }
+  .footer__copyright li {
+    padding-bottom: 6px;
+  }
 }
 @media (max-width: 920px) {
   .come__title-top {
@@ -2785,10 +2909,64 @@ select.form__input {
   .check-list__container {
     margin-right: 27px;
   }
+  .footer__row {
+    margin: 0 45px;
+  }
+  .footer__img-1 {
+    display: none;
+  }
+  .footer__img-2 {
+    display: none;
+  }
+  .footer-top__wrapper {
+    padding-bottom: 130px;
+  }
+  .footer__copyright a {
+    text-decoration: none;
+  }
+  .footer-bottom__row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .footer-bottom__column {
+    padding: 0 10px;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+  }
+  .footer-bottom__column .footer-bottom__column {
+    padding: 0;
+  }
+  .footer__copyright {
+    margin-bottom: 43px;
+  }
+  .footer-bottom__wrapper {
+    padding-bottom: 62px;
+  }
 }
 @media (max-width: 710px) {
   .help .help__title, .help .help__title-in-pickture {
     padding-left: 10px;
+  }
+  .image3 {
+    display: none;
+  }
+  .footer-bottom__column {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+  }
+  .footer__column-title {
+    margin-top: 40px;
+  }
+  .footer-bottom {
+    margin: 0 10px;
+  }
+  .footer-bottom__wrapper {
+    padding: 40px 0;
   }
 }
 @media (max-width: 690px) {
@@ -3151,6 +3329,45 @@ select.form__input {
             flex: 0 1 auto;
     margin-left: 0;
   }
+  .form__title {
+    padding-left: 85px;
+    padding-bottom: 55px;
+  }
+  .form__title p.vector {
+    position: static;
+    width: 22px;
+    height: 22px;
+    padding: 11px 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: 45px;
+  }
+  .form__title span {
+    padding-left: 45px;
+  }
+  .form__title span.in-black-stared {
+    padding: 0;
+  }
+  .form__title p {
+    padding-left: 45px;
+  }
+  .form__form {
+    padding-left: 130px;
+  }
+  .footer__title {
+    padding-top: 120px;
+    margin-bottom: 54px;
+  }
+  .footer__row {
+    margin: 0 10px;
+  }
+  .footer-top__wrapper {
+    padding-left: 0;
+  }
 }
 @media (max-width: 450px) {
   .come__wrapper {
@@ -3224,5 +3441,26 @@ select.form__input {
   }
   .sensei__wrapper {
     padding: 0 9px;
+  }
+  .form__title {
+    padding-left: 8px;
+  }
+  .form__form {
+    padding-left: 10px;
+  }
+  .form__container {
+    padding-right: 0;
+  }
+  .footer__column {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    margin-left: 36px;
+  }
+  .footer__title {
+    padding-left: 9px;
+  }
+  .footer__title p {
+    padding-left: 38px;
   }
 }
