--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1843,20 +1843,19 @@ filter: blur(510px);
 }
 .footer__logo {
    margin-top: 8px;
-   a{
-      font-family: 'New-YorkerC';
-      font-style: normal;
-      font-weight: 400;
-      font-size: 20px;
-      line-height: 151.19%;
-      /* or 30px */
-      
-      text-transform: uppercase;
-      
-      color: #FFFFFF;
-      text-decoration: none;
-      opacity: 0.7;
-   }
+   font-family: 'New-YorkerC';
+   font-style: normal;
+   font-weight: 400;
+   font-size: 20px;
+   line-height: 151.19%;
+   /* or 30px */
+   display: inline-block;
+   text-transform: uppercase;
+   
+   color: #FFFFFF;
+   text-decoration: none;
+   opacity: 0.7;
+  
 
 }
 .footer__copyright {
@@ -2072,7 +2071,19 @@ line-height: 75px;
    .pay__img-2{
       left: -50px;
    }
-
+   .image3{
+      right: 10px;
+   }
+   .image3::after{
+      display: none;
+   }
+   .footer__row{
+      margin: 0 300px;
+      max-width: 100%;
+   }
+   .footer-bottom{
+      margin: 0 35px;
+   }
 }
 @media (max-width:1220px) {
    .secrets__text{
@@ -2152,12 +2163,38 @@ line-height: 75px;
    .reviews__title{
       white-space: nowrap;
    }
-
+   .form__form{
+      flex-direction: column;
+   }
+   .form__btn{
+      width: 150px;
+      height: 150px;
+      margin-top: 41px;
+   }
+   .form__title{
+      padding-left: 60px;
+   }
+   .footer__title{
+      padding: 142px 0 0 64px;
+   }
+   .footer__row{
+      margin-right: 100px;
+   }
+   .span.star-in{
+      position: static;
+   }
+   span.star-in::before{
+      display: none;
+   }
+   .footer__img-3{
+      right: -33px;
+   }
 }
 @media (max-width:1000px) {
    .come__wrapper{
       padding-right: 0;
    }
+
    .secrets{
       padding-top: 138px;
    }
@@ -2283,6 +2320,92 @@ line-height: 75px;
    .reviews__title{
       margin-right: 10px;
    }
+   .image1{
+      display: none;
+   }
+   .image2{
+      display: none;
+   }
+   .image3{
+      right: 73px;
+   }
+   .form__form{
+      padding-left: 171px;
+    
+   }
+   .form__title{
+      padding-left: 31px;
+      position: relative;
+      padding-bottom: 78px;
+      span{
+         display: block;
+         padding-left: 140px;
+      }
+      span.in-black-stared{
+         display: inline;
+         padding-left: 0;
+      }
+      p.vector{
+         margin-left:0px;
+         padding: 0;
+         position: absolute;
+         bottom: 180px;
+         left: 88px;
+         width: 48px;
+         height: 48px;
+         img{
+            width: 100%;
+         }
+      }
+      p{
+         padding-left: 140px;
+      }
+   }
+   .form__wrapper{
+      padding-bottom: 110px;
+   }
+   .footer__img-3{
+      display: none;
+   }
+   .footer-top__wrapper{
+      padding-bottom: 470px;
+   }
+   .footer__img-2{
+      top: auto;
+      bottom: 144px;
+      right: -28px;
+      left: auto;
+      width: 481px;
+      height: 240px;
+      img{
+         width: 100%;
+         height: 100%;
+      }
+   }
+   .footer__img-1{
+      top: auto;
+      bottom: 185px;
+      left: 34px;
+      width: 205px;
+      height: 266px;
+      img{
+         width: 100%;
+      }
+   }
+   .footer__row{
+      margin-left: 174px;
+   }
+   .footer__title p{
+      padding-left: 90px;
+   }
+   .footer__logo{
+      margin-bottom: 45px;
+   }
+   .footer__copyright{
+      li{
+         padding-bottom: 6px;
+      }
+   }
 }
 @media (max-width:920px) {
    .come__title-top {
@@ -2395,6 +2518,40 @@ line-height: 75px;
   .check-list__container{
    margin-right: 27px;
   }
+  .footer__row{
+   margin: 0 45px;
+  }
+  .footer__img-1{
+   display: none;
+  }
+  .footer__img-2{
+   display: none;
+  }
+  .footer-top__wrapper{
+   padding-bottom: 130px;
+  }
+  .footer__copyright{
+   a{
+      text-decoration: none;
+   }
+  }
+  .footer-bottom__row{
+   flex-wrap: wrap;
+   justify-content: flex-end;
+  }
+  .footer-bottom__column{
+   padding: 0 10px;
+   flex: 1 1 auto;
+   .footer-bottom__column{
+      padding: 0;
+   }
+  }
+  .footer__copyright{
+   margin-bottom: 43px;
+  }
+  .footer-bottom__wrapper{
+   padding-bottom: 62px;
+  }
 }
 @media (max-width:710px) {
    .help{
@@ -2402,6 +2559,22 @@ line-height: 75px;
          padding-left: 10px;
       }
    }
+   .image3{
+      display: none;
+   }
+   
+     .footer-bottom__column{
+      flex: 1 1 100%;
+     }
+     .footer__column-title{
+      margin-top: 40px;
+     }
+     .footer-bottom{
+      margin: 0 10px;
+     }
+     .footer-bottom__wrapper{
+      padding: 40px 0;
+     }
 }
 @media (max-width:690px) {
    .come__wrapper{
@@ -2757,6 +2930,41 @@ line-height: 75px;
       flex: 0 1 auto;
       margin-left: 0;
    }
+   .form__title{
+      padding-left: 85px;
+      padding-bottom: 55px;
+      p.vector{
+         position: static;
+         width: 22px;
+         height: 22px;
+         padding: 11px 0;
+         display: flex;
+         align-items: center;
+         margin-left: 45px;
+      }
+      span{
+         padding-left: 45px;
+      }
+      span.in-black-stared{
+         padding: 0;
+      }
+      p{
+         padding-left: 45px;
+      }
+   }
+   .form__form{
+      padding-left: 130px;
+   }
+   .footer__title{
+      padding-top: 120px;
+      margin-bottom: 54px;
+   }
+   .footer__row{
+      margin: 0 10px;
+   }
+   .footer-top__wrapper{
+      padding-left: 0;
+   }
 }
 @media (max-width:450px) {
    .come__wrapper{
@@ -2823,6 +3031,25 @@ line-height: 75px;
    }
    .sensei__wrapper{
       padding: 0 9px;
+   }
+   .form__title{
+      padding-left: 8px;
+   }
+   .form__form{
+      padding-left: 10px;
+   }
+   .form__container{
+      padding-right: 0;
+   }
+   .footer__column{
+      flex: 0 1 100%;
+      margin-left: 36px;
+   }
+   .footer__title{
+      padding-left: 9px;
+      p{
+         padding-left: 38px;
+      }
    }
 }
 
