--- a/css/style.css
+++ b/css/style.css
@@ -3463,3 +3463,29 @@ select.form__input {
     padding-left: 38px;
   }
 }
+.to-up__container {
+  position: fixed;
+  right: 30px;
+  bottom: 20px;
+  background-color: rgba(53, 48, 56, 0.5333333333);
+  border-radius: 50%;
+  padding: 0 15px;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 1s;
+  -o-transition: all 1s;
+  transition: all 1s;
+}
+.to-up__container a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.to-up__container:hover {
+  background-color: #353038;
+}
+
+.to-up.active .to-up__container {
+  opacity: 1;
+  visibility: visible;
+}
