--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3051,5 +3051,25 @@ line-height: 75px;
       }
    }
 }
-
-
+.to-up__container{
+   position: fixed;
+   right: 30px;
+   bottom: 20px;
+   background-color: #35303888;
+   border-radius: 50%;
+   padding: 0 15px;
+   opacity: 0;
+   visibility: hidden;
+   transition: all 1s;
+   a{
+      text-decoration: none;
+      color: #fff;
+   }
+}
+.to-up__container:hover{
+   background-color: #353038;
+}
+.to-up.active .to-up__container{
+   opacity: 1;
+   visibility: visible;
+}
